[package]
name = "pipenger"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = { version = "0.4.2", features = ["parallel"]}
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [ "curve" ] }
ark-ff = { version = "0.4.2", features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", features = ["parallel"] }
itertools = "0.13.0"
rayon = "1.10.0"
num-traits = "0.2.19"
tracing = { version = "0.1.41", features = ["log-always"] }
ark-ed-on-bls12-381-bandersnatch = "0.5.0"
